--- a/notebooks/sentinel2_from_labels.ipynb
+++ b/notebooks/sentinel2_from_labels.ipynb
@@ -10,15 +10,15 @@
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
+    "import branca.colormap as cm\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
+    "from darts_acquisition.utils.copernicus import init_copernicus\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
-    "from darts.utils.copernicus import init_copernicus\n",
-    "\n",
-    "logging.getLogger(\"darts\").setLevel(logging.INFO)\n",
+    "logging.getLogger(\"darts\").setLevel(logging.DEBUG)\n",
     "logging.getLogger(\"darts\").addHandler(RichHandler())\n",
     "\n",
     "traceback.install(show_locals=True)\n",
@@ -87,12 +87,32 @@
     "\n",
     "footprints = footprints.take([0, 1, 2])\n",
     "matches = match_s2ids_from_geodataframe_stac(\n",
-    "    aoi=footprints,\n",
-    "    day_range=14,\n",
-    "    max_cloud_cover=10,\n",
-    "    simplify_geometry=0.1,\n",
+    "    aoi=footprints, day_range=14, max_cloud_cover=10, simplify_geometry=0.1, save_scores=Path(\"./s2-scores.parquet\")\n",
     ")\n",
     "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c275f018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "gpd.read_parquet(Path(\"./s2-scores.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4cda258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "footprints[\"s2_item\"] = footprints.index.map(matches)\n",
+    "footprints[\"s2id\"] = footprints.s2_item.map(lambda x: x.id if x is not None else None)"
    ]
   },
   {
@@ -104,8 +124,8 @@
    "source": [
     "matches_gdf = gpd.GeoDataFrame.from_features([item.to_dict() for item in matches.values() if item], crs=\"EPSG:4326\")\n",
     "matches_gdf[\"s2id\"] = [item.id for item in matches.values() if item]\n",
-    "m = matches_gdf.explore(color=\"red\")\n",
-    "footprints.explore(m=m)\n",
+    "m = matches_gdf.explore(column=\"s2id\", cmap=[cm.step.Pastel1_08.rgb_hex_str(i / 8) for i in range(8)])\n",
+    "footprints.explore(m=m, column=\"s2id\", cmap=[cm.step.Set1_08.rgb_hex_str(i / 8) for i in range(8)])\n",
     "m"
    ]
   },
@@ -116,8 +136,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "footprints[\"s2_item\"] = footprints.index.map(matches)\n",
-    "\n",
     "for i, footprint in footprints.iterrows():\n",
     "    if footprint[\"s2_item\"] is None:\n",
     "        print(f\"No matching Sentinel-2 item found for {footprint['image_id']}.\")\n",
@@ -136,75 +154,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from darts_acquisition.planet import load_planet_masks, load_planet_scene\n",
     "from darts_acquisition.s2 import load_s2_from_stac\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "s2ds = load_s2_from_stac(s2_item, cache=Path(\"/isipd/projects/p_aicore_pf/darts-nextgen/data/cache/s2stac\"))\n",
-    "s2ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "275eaf19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from darts_acquisition.planet import load_planet_masks, load_planet_scene\n",
-    "from darts_acquisition.utils.arosics import align, visualize_alignment\n",
-    "\n",
+    "display(s2ds)\n",
     "planetds = load_planet_scene(footprint.fpath)\n",
     "planet_mask = load_planet_masks(footprint.fpath).quality_data_mask == 2\n",
-    "planet_mask[::20, ::20].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "109f6d6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planetds.nir[::20, ::20].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6a1154e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s2ds.nir[::20, ::20].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71051b51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(s2ds.scl[::20, ::20]).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02452b3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s2ds.quality_data_mask[::20, ::20].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57f3f971",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s2ds.scl.isin([4, 5, 6])[::20, ::20].plot()"
+    "display(planetds)\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 5, figsize=(20, 6))\n",
+    "\n",
+    "s2ds.red[::20, ::20].plot(ax=axs[0, 0], cmap=\"Reds\", vmax=0.3)\n",
+    "s2ds.green[::20, ::20].plot(ax=axs[0, 1], cmap=\"Greens\", vmax=0.3)\n",
+    "s2ds.blue[::20, ::20].plot(ax=axs[0, 2], cmap=\"Blues\", vmax=0.3)\n",
+    "s2ds.nir[::20, ::20].plot(ax=axs[0, 3], cmap=\"gray\", vmax=0.3)\n",
+    "s2ds.quality_data_mask[::20, ::20].plot(ax=axs[0, 4])\n",
+    "\n",
+    "planetds.red[::20, ::20].plot(ax=axs[1, 0], cmap=\"Reds\")\n",
+    "planetds.green[::20, ::20].plot(ax=axs[1, 1], cmap=\"Greens\")\n",
+    "planetds.blue[::20, ::20].plot(ax=axs[1, 2], cmap=\"Blues\")\n",
+    "planetds.nir[::20, ::20].plot(ax=axs[1, 3], cmap=\"gray\")\n",
+    "planet_mask[::20, ::20].plot(ax=axs[1, 4])"
    ]
   },
   {
@@ -214,31 +186,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from darts_acquisition.utils.arosics import align\n",
+    "\n",
     "logging.getLogger(\"darts\").setLevel(logging.DEBUG)\n",
     "align(\n",
-    "    s2ds,\n",
-    "    planetds.astype(\"float32\").shift(x=2, y=5),\n",
-    "    target_mask=s2ds.scl.isin([4, 5, 6]),\n",
-    "    reference_mask=planet_mask,\n",
-    "    resample_to=\"target\",\n",
-    "    return_offsets=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fa4d19d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vizs = visualize_alignment(\n",
     "    s2ds.shift(x=-10),\n",
-    "    planetds.astype(\"float32\") / 3000,\n",
-    "    target_mask=s2ds.scl.isin([4, 5, 6]),\n",
+    "    planetds.astype(\"float32\"),\n",
+    "    target_mask=s2ds.quality_data_mask.shift(x=-10) == 2,\n",
     "    reference_mask=planet_mask,\n",
     "    resample_to=\"target\",\n",
-    "    window_size=64,\n",
+    "    return_offset=True,\n",
     ")"
    ]
   },
@@ -249,32 +206,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s2ds_aligned = align(\n",
+    "s2ds_aligned, oi = align(\n",
     "    s2ds.shift(x=-10),\n",
     "    s2ds,\n",
-    "    target_mask=s2ds.scl.isin([4, 5, 6]),\n",
-    "    reference_mask=s2ds.scl.isin([4, 5, 6]),\n",
+    "    target_mask=s2ds.quality_data_mask == 2,\n",
+    "    reference_mask=s2ds.quality_data_mask == 2,\n",
     "    window_size=64,\n",
     "    bands=[\"red\", \"green\", \"blue\", \"nir\"],\n",
+    "    return_offset=True,\n",
     ")\n",
+    "display(oi)\n",
     "(s2ds_aligned.red - s2ds.red)[::20, ::20].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf06a72e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vizs = visualize_alignment(\n",
-    "    s2ds.shift(x=-10),\n",
-    "    s2ds,\n",
-    "    target_mask=s2ds.scl.isin([4, 5, 6]),\n",
-    "    reference_mask=s2ds.scl.isin([4, 5, 6]),\n",
-    "    window_size=64,\n",
-    "    bands=[\"red\", \"green\", \"blue\", \"nir\"],\n",
-    ")"
    ]
   },
   {
