Update ruff and fix lints

--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -9,16 +9,15 @@
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
-    "import cupy_xarray  # noqa: F401\n",
+    "import cupy_xarray\n",
     "import hvplot.xarray\n",
-    "import rioxarray  # noqa: F401\n",
+    "import rioxarray\n",
+    "from darts.utils.logging import LoggingManager\n",
     "from darts_acquisition.planet import load_planet_scene\n",
     "from dask.distributed import Client\n",
     "from odc.stac import configure_rio\n",
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
-    "\n",
-    "from darts.utils.logging import LoggingManager\n",
     "\n",
     "LoggingManager.setup_logging()\n",
     "logging.basicConfig(\n",
